# NIM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: nim.h
src/: nim.cpp
